fixed custom background not showing

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -10,12 +10,12 @@ html {
 }
 
 body {
-    background: url(./images/background1.png) no-repeat center center fixed;
+    background: url(./images/background_dark.png) no-repeat center center fixed;
     background-size: cover;
 }
 
 .lightmode {
-    background: url(./images/background2.png) no-repeat center center fixed;
+    background: url(./images/background_light.png) no-repeat center center fixed;
     background-size: cover;
 }
 
